--- a/advertising-demo-app/app/src/main/res/layout/activity_banner_view.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_banner_view.xml
@@ -27,12 +27,10 @@
 
     <tech.solutionarchitects.advertisingsdk.core.view.banner.BannerView
         android:id="@+id/bannerView"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_width="300dp"
+        android:layout_height="117dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
