Example app has been updated to use latest SDK release.

--- a/advertising-demo-app/app/src/main/res/layout/activity_main.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,15 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
+            android:id="@+id/openNativeBannerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/native_banner_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
             android:id="@+id/recyclerViewScreenViewButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,6 +65,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/scrollableLayoutScreenButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/scrollable_layout_screen_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
