--- a/advertising-demo-app/app/src/standard/res/layout/activity_scrollable_with_banners.xml
+++ b/advertising-demo-app/app/src/standard/res/layout/activity_scrollable_with_banners.xml
@@ -39,7 +39,7 @@
                 android:layout_height="300dp"
                 android:background="@color/teal_200"/>
 
-            <tech.solutionarchitects.advertisingsdk.core.view.banner.BannerView
+            <tech.solutionarchitects.advertisingsdk.api.view.banner.BannerView
                 android:id="@+id/bannerView"
                 android:layout_width="300dp"
                 android:layout_height="117dp" />
