--- a/advertising-demo-app/app/src/standard/res/layout/activity_main.xml
+++ b/advertising-demo-app/app/src/standard/res/layout/activity_main.xml
@@ -77,4 +77,14 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/settingsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing_12dp"
+        android:layout_marginBottom="@dimen/spacing_12dp"
+        android:text="@string/settings"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
