--- a/advertising-demo-app/app/src/main/res/layout/activity_banner_view.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_banner_view.xml
@@ -25,7 +25,7 @@
     android:id="@+id/mainLayout"
     tools:context=".activity.BannerViewActivity">
 
-    <tech.solutionarchitects.advertisingsdk.api.view.banner.BannerView
+    <tech.solutionarchitects.advertisingsdk.api.feature.banner.BannerView
         android:id="@+id/bannerView"
         android:layout_width="300dp"
         android:layout_height="117dp"
