--- a/advertising-demo-app/app/src/main/res/layout/activity_scrollable_with_banners.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_scrollable_with_banners.xml
@@ -49,7 +49,7 @@
                 android:layout_height="300dp"
                 android:background="@color/black"/>
 
-            <tech.solutionarchitects.advertisingsdk.api.view.banner.BannerView
+            <tech.solutionarchitects.advertisingsdk.api.feature.banner.BannerView
                 android:id="@+id/bannerView"
                 android:layout_width="300dp"
                 android:layout_height="117dp"
@@ -72,7 +72,7 @@
                 android:layout_height="300dp"
                 android:background="@color/purple_200"/>
 
-            <tech.solutionarchitects.advertisingsdk.api.view.banner.NativeBannerView
+            <tech.solutionarchitects.advertisingsdk.api.feature.nativebanner.NativeBannerView
                 android:id="@+id/nativeBannerView"
                 android:layout_width="728px"
                 android:layout_height="90px"
