--- a/advertising-demo-app/app/src/main/res/layout/activity_vast_video.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_vast_video.xml
@@ -21,7 +21,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
-    <tech.solutionarchitects.advertisingsdk.api.view.video.VastVideoView
+    <tech.solutionarchitects.advertisingsdk.api.feature.video.VastVideoView
         android:id="@+id/vastVideoPlayer"
         android:layout_width="350dp"
         android:layout_height="180dp"
