--- a/advertising-demo-app/app/src/main/res/layout/recycler_view_item.xml
+++ b/advertising-demo-app/app/src/main/res/layout/recycler_view_item.xml
@@ -16,25 +16,18 @@
   ~ of this source code, which in
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="106dp"
     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="16dp"
     android:background="@color/cardview_dark_background">
 
-    <tech.solutionarchitects.advertisingsdk.api.feature.banner.BannerView
-        android:id="@+id/bannerView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/textView"
@@ -47,4 +40,4 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="placement ID" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
