--- a/advertising-demo-app/app/src/main/res/layout/activity_main.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_main.xml
@@ -30,12 +30,12 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/spacing_16dp"
             android:text="@string/single_impression"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginVertical="@dimen/spacing_16dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/singleImpressionTitleContainer"
@@ -113,12 +113,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="@string/programmatically"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:maxLines="1"
-                android:ellipsize="end"/>
+                app:layout_constraintStart_toStartOf="parent" />
 
             <Button
                 android:id="@+id/programmaticallyNativeBannerButtonView"
@@ -126,12 +126,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="@string/programmatically"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:maxLines="1"
-                android:ellipsize="end"/>
+                app:layout_constraintStart_toStartOf="parent" />
 
         </LinearLayout>
 
@@ -182,12 +182,12 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/spacing_16dp"
             android:text="@string/multiple_impressions"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/productCreativeButton"
-            android:layout_marginVertical="@dimen/spacing_16dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/productCreativeButton" />
 
 
         <Button
@@ -227,20 +227,19 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/spacing_16dp"
             android:text="@string/media_impressions"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/openMultipleProductCreative"
-            android:layout_marginVertical="@dimen/spacing_16dp"/>
-
+            app:layout_constraintTop_toBottomOf="@+id/openMultipleProductCreative" />
 
         <Button
-            android:id="@+id/videoPlayerViewButton"
+            android:id="@+id/mediaPlayerViewButton"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/video_player"
+            android:text="@string/media"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
