--- a/advertising-demo-app/app/src/main/res/layout/activity_banner_view.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_banner_view.xml
@@ -16,7 +16,6 @@
   ~ The copyright notice above does not provide evidence of any actual or intended publication or disclosure
   ~ of this source code, which in
   -->
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -27,10 +26,9 @@
 
     <tech.solutionarchitects.advertisingsdk.api.feature.banner.BannerView
         android:id="@+id/bannerView"
-        android:layout_width="300dp"
-        android:layout_height="117dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
