--- a/advertising-demo-app/app/src/main/res/layout/activity_native_banner.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_native_banner.xml
@@ -23,9 +23,9 @@
 
     <tech.solutionarchitects.advertisingsdk.api.feature.nativebanner.NativeBannerView
         android:id="@+id/nativeBannerView"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
