--- a/advertising-demo-app/app/src/main/res/layout-land/activity_native_banner.xml
+++ b/advertising-demo-app/app/src/main/res/layout-land/activity_native_banner.xml
@@ -21,7 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <tech.solutionarchitects.advertisingsdk.api.feature.nativebanner.NativeBannerView
+    <tech.solutionarchitects.advertisingsdk.internal.feature.banner.NativeBannerView
         android:id="@+id/nativeBannerView"
         android:layout_width="480px"
         android:layout_height="640px"
