--- a/advertising-demo-app/app/src/main/res/layout/activity_banner_view.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_banner_view.xml
@@ -24,7 +24,7 @@
     android:id="@+id/mainLayout"
     tools:context=".activity.BannerViewActivity">
 
-    <tech.solutionarchitects.advertisingsdk.api.feature.banner.BannerView
+    <tech.solutionarchitects.advertisingsdk.internal.feature.banner.BannerView
         android:id="@+id/bannerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
